feat: database setup complete

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 #APP
 PORT=3000
 BASE_URL="http://localhost:${PORT}"
+NODE_ENV=""
+ENVIRONMENT=""
 
 #Database
 DB_HOST="127.0.0.1"
@@ -9,3 +11,4 @@ DB_USER=""
 DB_PASSWORD=""
 DB_NAME=""
 DB_SYNC=true
+DB_TYPE="" #postgres or mysql or other db vendors see typeorm docs https://typeorm.biunav.com/en/connection-options.html
