--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "npm run typeorm migration:generate -- -d src/database/config/orm.config.ts src/database/migrations/$npm_config_name",
+    "migration:revert": "npm run typeorm migration:revert -- -d src/database/config/orm.config.ts",
+    "migration:create": "npm run typeorm migration:create src/database/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm migration:run -- -d src/database/config/orm.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -28,6 +33,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "joi": "^17.9.2",
