fix: fix job trigger

--- a/.github/workflow/test.yaml
+++ b/.github/workflow/test.yaml
@@ -1,12 +1,6 @@
 name: Test KTMCORE Application
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: [push]
 
 env:
   IMAGE_TAG: ktm-core
