--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   tests:
-    name: Run tests
+    name: Build and Run tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -33,4 +33,4 @@ jobs:
         run: docker run $IMAGE_TAG:$ENVIRONMENT sh -c 'npm run lint'
 
       - name: Run E2E tests
-        run: docker run $IMAGE_TAG:$ENVIRONMENT sh -c 'npm run test:e2e'
+        run: docker run $IMAGE_TAG:$ENVIRONMENT sh -c 'npm run test'
