--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,8 +17,7 @@ jobs:
       - name: Create .env file from Secret
         id: import-env
         run: |
-          echo "${{ secrets.ENV_FILE }}" >> .env
-          echo .env
+          echo "${{ secrets.TEST_ENV_FILE }}" >> .env
       - uses: cardinalby/export-env-action@v2
         with:
           mask: false
