fix: fixed database connection issue

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,6 +34,7 @@ jobs:
         id: import-env
         run: |
           echo "${{ secrets.PROD_ENV_FILE }}" >> .env.production
+          echo "${{ secrets.TEST_ENV_FILE }}" >> .env
 
           echo "ls -a ."
           ls -a .
